rnsc/tests/snapshots/general-method_access_flags-synchronized.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class MethodSynchronized
.super java/lang/Object

.method synchronized main ()V
    .code stack 1 locals 0
      return
    .code_end
.method_end
.class_end
----- INPUT -----
.class MethodSynchronized
.super java/lang/Object

.method synchronized main ()V
  .code stack 1 locals 0
    return
  .code_end
.method_end
.class_end
----- STDERR -----

----- HASH -----
71206dae2ebc121a53c3f0e28c37f9154b3e70a8d48cbefafcdd85ef38dff7d0
