rnsc/tests/snapshots/general-method_descriptor_explicit_class.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public MyClass
.super java/lang/Object

.method public main someDescriptor
    .code stack 1 locals 1
      return
    .code_end
.method_end
.class_end
----- INPUT -----
; Tests that .method descriptor with explicit @class type hint overrides implicit @utf8.
; Note: javap fails to parse because method descriptor must be Utf8 entry per JVM spec.
; Expected: success, javap fails

.class public MyClass
.super java/lang/Object

.method public main @class someDescriptor
    .code stack 1 locals 1
      return
    .code_end
.method_end
.class_end
----- STDERR -----

----- JAVAP -----
javap failed
