rnsc/tests/snapshots/general-package-numeric_as_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public 123/MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that a numeric literal can be used as package name.
; This should produce an error because 123 is a number, not an identifier.
; Expected: parser error about unexpected token

.class public MyClass
.super java/lang/Object
.package 123

.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/123/MyClass.class
  Last modified <DATE>; size 63 bytes
  SHA-256 checksum 4812d5d8cd362f8972ee2222b95725d9251025f7ddd18e59da95753298959b47
public class 123.MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // 123/MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // "123/MyClass"
  #4 = Utf8               123/MyClass
{
}
