rnsc/tests/snapshots/general-package-with_package.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public com/example/test/MyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests that .package directive correctly prepends package to class binary name.
; Input: .class public MyClass with .package com/example/test
; Expected: Binary name becomes com/example/test/MyClass (visible in disassembly)
; This proves:
;   1. Package is parsed and stored in AST
;   2. Package is prepended to class name in constant pool
;   3. Class file is written to correct directory structure (com/example/test/)

.class public MyClass
.package com/example/test
.super java/lang/Object

.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/com/example/test/MyClass.class
  Last modified <DATE>; size 83 bytes
  SHA-256 checksum c34bcdd56bc4a8002b9f583afb95471975308878fa885a6826ef281904fa854a
public class com.example.test.MyClass
  minor version: 0
  major version: 69
  flags: (0x0001) ACC_PUBLIC
  this_class: #3                          // com/example/test/MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // com/example/test/MyClass
  #4 = Utf8               com/example/test/MyClass
  #5 = Utf8               Code
{
}
